--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -895,17 +895,17 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-NM-HJG">
-                                <rect key="frame" x="30" y="20" width="495" height="161"/>
+                                <rect key="frame" x="30" y="44" width="495" height="137"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="meg-T3-nhf">
-                                    <rect key="frame" x="1" y="1" width="478" height="159"/>
+                                    <rect key="frame" x="1" y="1" width="478" height="135"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="W5m-u9-pLe">
-                                            <rect key="frame" x="0.0" y="0.0" width="478" height="159"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="478" height="135"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="478" height="159"/>
+                                            <size key="minSize" width="478" height="135"/>
                                             <size key="maxSize" width="825" height="10000000"/>
                                             <attributedString key="textStorage">
                                                 <fragment content="Whenever you add PDFs, it will be logged here.">
@@ -925,7 +925,7 @@ DQ
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zLN-rE-dZp">
-                                    <rect key="frame" x="479" y="1" width="15" height="159"/>
+                                    <rect key="frame" x="479" y="1" width="15" height="135"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -938,25 +938,32 @@ DQ
                                 </buttonCell>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="jtT-zv-0AY">
-                                <rect key="frame" x="525" y="10" width="0.0" height="0.0"/>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="pQR-5f-lh5">
+                                <rect key="frame" x="516" y="10" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="09b-hq-SZo"/>
+                                    <constraint firstAttribute="width" constant="24" id="v1E-Va-pDJ"/>
+                                </constraints>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAdvanced" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="pQR-5f-lh5">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="openSettings:" target="XfG-lQ-9wD" id="PU9-eC-rzk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="8IV-NM-HJG" secondAttribute="bottom" constant="20" symbolic="YES" id="1Gx-EB-Hmk"/>
                             <constraint firstItem="8IV-NM-HJG" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="1MO-pj-ofl"/>
                             <constraint firstItem="AXS-Qu-oii" firstAttribute="bottom" secondItem="t2v-Jc-y0r" secondAttribute="top" constant="-40" id="5cW-yV-yqH"/>
+                            <constraint firstAttribute="bottom" secondItem="jtT-zv-0AY" secondAttribute="bottom" constant="10" id="6n3-yE-PiI"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="leading" secondItem="aeL-U2-WUE" secondAttribute="leading" id="6vP-4g-B5z"/>
                             <constraint firstItem="aeL-U2-WUE" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="17.5" id="98x-Vg-Ufj"/>
                             <constraint firstAttribute="trailing" secondItem="YMB-qL-TOZ" secondAttribute="trailing" constant="30" id="9jv-hE-tWh"/>
                             <constraint firstItem="t2v-Jc-y0r" firstAttribute="bottom" secondItem="8IV-NM-HJG" secondAttribute="top" constant="-5" id="AHf-FM-ZZj"/>
-                            <constraint firstAttribute="bottom" secondItem="jtT-zv-0AY" secondAttribute="bottom" constant="10" id="IST-gD-Y07"/>
+                            <constraint firstItem="jtT-zv-0AY" firstAttribute="top" secondItem="8IV-NM-HJG" secondAttribute="bottom" constant="10" id="Htn-27-YTi"/>
+                            <constraint firstAttribute="trailing" secondItem="jtT-zv-0AY" secondAttribute="trailing" constant="15" id="L0r-PN-7ya"/>
                             <constraint firstItem="Qpt-MH-Ehe" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="leading" id="Lj7-4j-MNq"/>
                             <constraint firstItem="dd9-OM-a5w" firstAttribute="top" secondItem="YMB-qL-TOZ" secondAttribute="bottom" constant="15" id="LvP-m1-171"/>
-                            <constraint firstAttribute="trailing" secondItem="jtT-zv-0AY" secondAttribute="trailing" constant="30" id="M8Y-uW-v8X"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="top" secondItem="aeL-U2-WUE" secondAttribute="bottom" constant="8" id="MUy-NW-PKL"/>
                             <constraint firstItem="Qpt-MH-Ehe" firstAttribute="width" secondItem="AXS-Qu-oii" secondAttribute="width" multiplier="0.5" id="MdN-81-LRL"/>
                             <constraint firstItem="90v-Vt-oBd" firstAttribute="leading" secondItem="LG0-av-GAj" secondAttribute="leading" id="Mri-Dj-LzZ"/>
@@ -981,6 +988,7 @@ DQ
                         <outlet property="btnMonitor" destination="OdP-IC-WqB" id="MOC-8b-aio"/>
                         <outlet property="btnMonitor2" destination="LzS-aI-c8R" id="saz-gY-8FV"/>
                         <outlet property="btnPrint" destination="Nc4-xm-iyB" id="65F-5t-CZA"/>
+                        <outlet property="btnSettings" destination="jtT-zv-0AY" id="Jx5-d2-7FZ"/>
                         <outlet property="edtFolderPath2" destination="90v-Vt-oBd" id="gTj-yI-HRn"/>
                         <outlet property="imvStatus" destination="7kM-6n-2BJ" id="PGO-pt-vwe"/>
                         <outlet property="imvStatus2" destination="EkR-Pn-JtU" id="gSH-x0-DDm"/>
@@ -1246,6 +1254,7 @@ DQ
         </scene>
     </scenes>
     <resources>
+        <image name="NSAdvanced" width="32" height="32"/>
         <image name="Warning" width="16" height="16"/>
     </resources>
 </document>
